@@ -144,10 +144,12 @@ module Rake
         Rake.application.add_import(fn)
       end
     end
+
   end
 
+  DeprecatedCommands = Object.new.extend(DSL)
+
   module DeprecatedObjectDSL # :nodoc:
-    Commands = Object.new.extend DSL
     DSL.private_instance_methods(false).each do |name|
       line = __LINE__+1
       class_eval %{
@@ -160,8 +162,8 @@ module Rake
             end
             $stderr.puts "WARNING: DSL method \#{self.class}##{name} called at \#{caller.first}"
           end
-          Rake::DeprecatedObjectDSL::Commands.send(:#{name}, *args, &block)
-          end
+          Rake::DeprecatedCommands.send(:#{name}, *args, &block)
+        end
         private :#{name}
       }, __FILE__, line
     end
